[metadata]
name = garduino
version = 4.0.0
description = Greenhouse monitoring using ESP32.
author = Thijs Triemstra
author_email = info@collab.nl
url = https://github.com/thijstriemstra/garduino
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.7, <4
install_requires =
    wheel
    esphome
    Pillow

[options.extras_require]
docs = sphinx>=1.5.1
qa =
    flake8
    rstcheck

[bdist_wheel]
universal = 1

[flake8]
ignore = E127, E128, E241, E402, E501, E731
exclude =
    .AppleDouble,
    .ropeproject,
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist
